# columns-gpt

./: .env.template  .gitignore  MANIFEST.in  PYPI-PREP.md  README.md  publish.md  pyproject.toml  setup.py  use_this_columns_gpt.py
columns_gpt/: __init__.py  analyzer.py  cli.py  llm.py  models.py  prompts.py  utils.py
columns_gpt/examples/: __init__.py  basic_usage.py
columns_gpt/tests/: __init__.py  test_utils.py
examples/: columns_example.py  input_data.csv  template.json
