[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "columns-gpt"
version = "0.1.0"
description = "DataFrame column analysis and matching with LLM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Josh Janzen", email = "joshjanzen@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
# The version is read from setup.py for consistency

[project.urls]
Homepage = "https://github.com/zen-apps/columns-gpt"
Repository = "https://github.com/zen-apps/columns-gpt.git"
"Bug Tracker" = "https://github.com/zen-apps/columns-gpt/issues"

[project.scripts]
columns-gpt = "columns_gpt.cli:main"